<resources>
    <string name="app_name">MyAppPortifolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_btn">Spotify Streamer</string>
    <string name="score_btn">Scores App</string>
    <string name="library_btn">Library App</string>
    <string name="build_bigger_btn">Build It Bigger</string>
    <string name="reader_btn">XYZ Reader</string>
    <string name="capstone_btn">Capstone: My own app</string>

    <string name="spotify_msg">Launch Spotify Streamer App</string>
    <string name="score_msg">Launch Scores App</string>
    <string name="library_msg">Launch Library App</string>
    <string name="build_bigger_msg">Launch Build It Bigger App</string>
    <string name="reader_msg">Launch XYZ Reader App</string>
    <string name="capstone_msg">Launch Capstone: My own app</string>
</resources>
