<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:background="#3c3f41">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <Button
            android:id="@+id/spotify"
            style="@style/PortfolioButton"
            android:text="@string/spotify_btn"/>

        <Button
            android:id="@+id/score"
            style="@style/PortfolioButton"
            android:text="@string/score_btn"/>

        <Button
            android:id="@+id/library"
            style="@style/PortfolioButton"
            android:text="@string/library_btn"/>

        <Button
            android:id="@+id/build_bigger"
            style="@style/PortfolioButton"
            android:text="@string/build_bigger_btn"/>

        <Button
            android:id="@+id/reader"
            style="@style/PortfolioButton"
            android:text="@string/reader_btn"/>

        <Button
            android:id="@+id/capstone"
            style="@style/CapstoneButton"
            android:text="@string/capstone_btn"/>

    </LinearLayout>


</ScrollView>
